# nixos-config

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .prettierrc  .rgignore  .sops.yaml  .styluaignore  AGENTS.md  CREDITS.org  DAWS.org  Justfile  ci.nix  devshell.nix  flake-file.nix  flake-parts.tix  flake.nix  home.nix  new-home.nix  old-home.nix  outputs.nix  pedantix.toml  sgconfig.yml  skills-lock.json  tix.toml  treefmt.nix  tsconfig.json  typos.toml  waybar.css  wezterm.lua
home/: catppuccin.nix  cuda.nix  default.nix  fuzzel.nix  hyprland.nix  just.nix  llama.nix  neovim.nix  nushell.nix  waybar.nix  weztem.nix
lib/: ags.nix  deepmerge.nix  default.nix  hosts.nix  options.nix
modules/: angrr.nix  atuin.nix  bat.nix  btop.nix  cardinal.nix  catppuccin.nix  cosmic.nix  defaults.nix  delta.nix  den.nix  deploy-module.nix  deploy.nix  direnv.nix  distrobox.nix  dotool.nix  evince.nix  fd.nix  flake-file.nix  fonts.nix  fuzzel.nix  fzf.nix  gh.nix  hardware.nix  hm-systemd-packages.nix  hostname.nix  hosts.nix  impermanence.nix  jq.nix  just.nix  keepassxc.nix  llama-cpp.nix  mpv.nix  niri.nix  nix-system-graphics.nix  nix.nix  nushell.nix  plasma6.nix  podman.nix  prismlauncher.nix  qemu-guest.nix  (+22 more)
nix/: angrr.nix  ast-grep.nix  atuin.nix  awww.nix  bat.nix  btop.nix  ci.nix  defaults.nix  deploy-module.nix  deploy.nix  direnv.nix  dotool.nix  fd.nix  flake-file.nix  fonts.nix  freeze.nix  fzf.nix  (+39 more)
nix/bitbloxhub-shell/: Cargo.toml  default.nix
nix/bitbloxhub-shell/src/: main.rs
nix/bitbloxhub-shell/src/bar/: clock.rs  mod.rs  workspace.rs
(+309 files in other folders)
